Refactor models and controllers***
***Update task and category models and controllers to match new requirements
